# BlueBoot

./: .gitignore  .gitmodules  README.md
cam/: Makefile  jpgSrv.cpp  mount_ramdisk.sh  sh.info  start_system.sh
cli_bot/: CMakeLists.txt  blue_boot.cpp  blue_boot.hpp  main.cpp  udp_handler.cpp  udp_handler.hpp
mover/: Makefile  control_helper.cpp  control_helper.hpp  hwioab.cpp  hwioab.h  move.c  move_cmd.c  move_cmd.h  test.c
mover/pico_w/: CMakeLists.txt  build_mover.sh  build_openocd.sh  build_probe.sh  hwioab.cpp  picomover.cpp
remote/: settings.gradle
remote/app/: build.gradle
remote/app/src/androidTest/java/com/exameliza/jpgstr/: ExampleInstrumentedTest.java
remote/app/src/main/: AndroidManifest.xml
remote/app/src/main/java/com/exameliza/jpgstr/: MainActivity.java
remote/app/src/main/res/layout/: activity_main.xml
remote/app/src/main/res/values/: strings.xml  themes.xml
remote/app/src/main/res/values-night/: themes.xml
remote/app/src/test/java/com/exameliza/jpgstr/: ExampleUnitTest.java
remote/gradle/wrapper/: gradle-wrapper.properties
